# Navia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Navia.Editor/: CMakeLists.txt  imgui.ini
Navia.Editor/assets/scenes/: example.navia
Navia.Editor/assets/shaders/: flatColor.glsl  shader.glsl
Navia.Editor/include/: EditorApplication.hpp
Navia.Editor/include/layers/: EditorLayer.hpp
Navia.Editor/include/panels/: SceneHierarchyPanel.hpp
Navia.Editor/src/: EditorApplication.cpp
Navia.Editor/src/layers/: EditorLayer.cpp
Navia.Editor/src/panels/: SceneHierarchyPanel.cpp
Navia.Engine/: CMakeLists.txt  PrecompiledHeaders.hpp  PrecompiledHeaders.hpp~
Navia.Engine/include/: Application.hpp  Core.hpp  Navia.hpp  NaviaEntrypoint.hpp
Navia.Engine/include/navia/core/: Application.hpp  Base.hpp  Core.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  Logger.hpp  MouseButtons.hpp  MouseCodes.hpp  OrthographicCameraController.hpp  Timestep.hpp  Window.hpp
Navia.Engine/include/navia/debug/: Instrumentor.hpp
Navia.Engine/include/navia/events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Navia.Engine/include/navia/imgui/: ImGuiLayer.hpp
Navia.Engine/include/navia/platform/opengl/: OpenGLFramebuffer.hpp  OpenGLGraphicsContext.hpp  OpenGLIndexBuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.hpp
Navia.Engine/include/navia/platform/windows/: WindowsInput.hpp  WindowsWindow.hpp
Navia.Engine/include/navia/renderer/: BufferLayout.hpp  Camera.hpp  Framebuffer.hpp  GraphicsContext.hpp  IndexBuffer.hpp  OrthographicCamera.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  ShaderLibrary.hpp  SubTexture.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
Navia.Engine/include/navia/scene/: Components.hpp  Entity.hpp  Scene.hpp  SceneCamera.hpp  SceneSerializer.hpp  ScriptableEntity.hpp
Navia.Engine/include/navia/utils/: PlatformUtils.hpp
Navia.Engine/lib/glad/: CMakeLists.txt  README.md
Navia.Engine/lib/glad/include/glad/: glad.h
Navia.Engine/lib/glad/src/: glad.c
Navia.Engine/lib/stb_image/: stb_image.h
Navia.Engine/src/: Application.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Logger.cpp  Window.cpp
Navia.Engine/src/core/: Application.cpp  Layer.cpp  LayerStack.cpp  OrthographicCameraController.cpp  Timestep.cpp  Window.cpp
Navia.Engine/src/debug/: Instrumentor.cpp
Navia.Engine/src/events/: ApplicationEvent.cpp  Event.cpp  KeyEvent.cpp  MouseEvent.cpp  WindowEvent.cpp
Navia.Engine/src/imgui/: ImGuiLayer.cpp
Navia.Engine/src/platform/opengl/: OpenGLFramebuffer.cpp  OpenGLGraphicsContext.cpp  OpenGLIndexBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexBuffer.cpp
Navia.Engine/src/platform/windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp
Navia.Engine/src/renderer/: BufferLayout.cpp  Camera.cpp  Framebuffer.cpp  GraphicsContext.cpp  IndexBuffer.cpp  OrthographicCamera.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  ShaderLibrary.cpp  SubTexture.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Navia.Engine/src/scene/: Components.cpp  Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp  ScriptableEntity.cpp
Navia.Sandbox/: CMakeLists.txt  NaviaProfile-Runtime.json  NaviaProfile-Shutdown.json  NaviaProfile-Startup.json  imgui.ini
Navia.Sandbox/assets/shaders/: shader.glsl  texture.glsl
Navia.Sandbox/include/: SandboxApplication.hpp
Navia.Sandbox/include/layers/: ExampleLayer.hpp  ExampleLayer2D.hpp  SpriteLayer.hpp
Navia.Sandbox/src/: SandboxApplication.cpp
Navia.Sandbox/src/layers/: ExampleLayer.cpp  ExampleLayer2D.cpp  SpriteLayer.cpp
